# mcp_music_server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build-release.yaml
scripts/: qqmusic_login.py
src/mcp_music_server/: __init__.py  server.py
src/mcp_music_server/utils/: audio.py  qqmusic_auth.py
