[project]
name = "mcp-music-server"
version = "1.2.3"
description = "MCP Music Server - Music playback tools for LLM agents"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ganyu" }
]
keywords = ["mcp", "music", "server", "playback"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "mutagen>=1.47.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
sse = [
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
mcp-music-server = "mcp_music_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_music_server"]
